k8s-LEF/helm-dev/traefik/accountapigw-traefik-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: accountapigw-traefik-rules
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: now-apigwacc-dev.lefebvre.es
      http:
        paths:
          - path: /
            backend:
              serviceName: accountapigw
              servicePort: http
