k8s-LEF/helm-dev/traefik/lexonapigw-traefik-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lexonapigw-traefik-rules
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: now-apigwlex-dev.lefebvre.es
      http:
        paths:
          - path: /
            backend:
              serviceName: lexonapigw
              servicePort: http
