k8s-LEF/helm-dev/traefik/webgraph-traefik-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webgraph-traefik-rules
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: now-webgraph-dev.lefebvre.es
      http:
        paths:
          - path: /
            backend:
              serviceName: webgraph
              servicePort: http
