k8s-LEF/helm-dev/traefik/webportal-traefik-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webportal-traefik-rules
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: now.lefebvre-dev.es
      http:
        paths:
          - path: /
            backend:
              serviceName: webportal
              servicePort: http
